Fixed contact form spacing.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -248,7 +248,7 @@ ul {
 .map {
   position: absolute;
   width: 100%;
-  min-height: 500px;
+  min-height: 600px;
   opacity: 0.8;
 }
 
@@ -256,6 +256,7 @@ ul {
   .contact-form {
     float: right;
     margin-right: 20%;
-    margin-top: 20px;
+    margin-top: 10px;
+
   }
 }
